# mlops-credit-default

./: .gitignore  .pylama.ini  .yamllint  Makefile  README.md  credit_default_adaptation_plan.md  main.py  mlops_maturity_assessment.md  pyproject.toml  setup.cfg
.github/scripts/: create_test_data.py
.github/workflows/: fix_mlflow_artifacts.yml  lint-code.yml  predict_on_model_change.yml  retrain_on_change.yml
.mlflow/db/: mlflow.db
ARISA_DSML/: config.py  helpers.py  metrics.py  predict.py  preproc.py  resolve.py  train.py  validation.py
creditrisk/core/: config.py  metrics.py  validation.py
creditrisk/data/: preproc.py
creditrisk/models/: predict.py  resolve.py  train.py
creditrisk/utils/: helpers.py
data/processed/: test.csv
docs/: model_card.md
mlruns/129897484033928958/: meta.yaml
mlruns/2/: meta.yaml
mlruns/2/06a7de2c981f4f3986b83da221a9abc2/artifacts/: catboost_model_credit_default.cbm
mlruns/2/0fbac3e3c75f4c16999c88f7921606ad/: meta.yaml  metrics.json
mlruns/2/115bff7ff27f41acaaf57246995ecf32/: meta.yaml  metrics.json
mlruns/2/115bff7ff27f41acaaf57246995ecf32/artifacts/: catboost_model_credit_default.cbm
mlruns/2/13bb23866b0f428cad9bb4e291d1d763/: meta.yaml
mlruns/2/13bb23866b0f428cad9bb4e291d1d763/artifacts/: catboost_model_credit_default.cbm
mlruns/2/3ff77be20a45473b812dff8b472170ed/: meta.yaml  metrics.json
mlruns/2/9ded4cb44f0d4625a4a096e180f9a1c3/: meta.yaml  metrics.json
mlruns/4/: meta.yaml
mlruns/471263591849508182/: meta.yaml
mlruns/5/: meta.yaml
mlruns/5/046467d279ef48e2a650465e0499f033/: meta.yaml
mlruns/962275649614335590/: meta.yaml
mlruns/962275649614335590/5abdb5b959914cd3b003e97b879826f1/: meta.yaml
mlruns/962275649614335590/5abdb5b959914cd3b003e97b879826f1/metrics/: f1_cv_mean  (+4 more)
mlruns/962275649614335590/89b2d38330f14921ae6538d154ecbd97/: meta.yaml
mlruns/models/credit-default-classifier/: meta.yaml
models/: best_params.pkl  catboost_model_credit_default.cbm  catboost_model_titanic.cbm  cv_results.csv  explanations.json  model_params.pkl  preds.csv
notebooks/: 03-cagers-Modelling_refactored.ipynb  04-cagers-MLflow.ipynb
scripts/: regenerate_mlflow_plots.py  regenerate_plots.py  run_predict.sh
tests/: test_integration.py  test_metrics.py  test_preproc.py  test_train.py  test_validation.py
(+61 files in other folders)
