[project]
name = "mlops-credit-default-kaggle"
version = "0.1.0"
description = "MLOPS project implementing a complete MLOps pipeline for predicting credit card defaults based off kaggle"
readme = "README.md"
requires-python = ">=3.11.9,<4.0"

dependencies = [
    "catboost>=1.2.7",
    "dotenv>=0.9.9",
    "flake8>=7.1.2",
    "has>=0.0.4",
    "ipywidgets>=8.1.5",
    "jupyterlab-rise>=0.43.1",
    "kaggle>=1.6.17",
    "kaleido==0.2.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "mlflow>=2.22.0",
    "nbformat>=5.10.4",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pylama>=8.4.1",
    "ruff>=0.9.7",
    "scikit-learn>=1.6.1",
    "shap>=0.46.0",
]


[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E731", "E266", "E501", "C901", "N803", "FBT001", "FBT002", "N806", "E231", "E225", "E227", "W391", "E252", "E226"]
[tool.ruff.lint.isort]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.9.7",
]

